# diploma-back

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  ai_interactions.py  progress.py  submissions.py  task_tests.py  tasks.py  topics.py
app/api/tasks/: celery_app.py
app/core/: ai_client.py  config.py  database.py  database_celery.py  database_test.py  lifespan.py  logging.py  middleware.py  redis_connector.py  routes.py
app/exceptions/: exc.py  excs.py  http_exc.py  http_excs.py
app/migrations/: env.py
app/migrations/versions/: 2026_03_15_0613-19e326560919_create_all_needed_tables.py  2026_03_17_1608-7c6efe6bf079_seed_initial_data.py  2026_03_21_1218-1a1b9e0fba27_add_is_completed_to_topics_and_tasks.py  2026_03_21_1244-2ef6f3a7035a_fix_naming.py  2026_04_27_0654-df42d6ad42e5_add_completed_at.py  2026_04_27_0740-b4f4eaf691d3_add_is_interview.py  (+3 more)
app/models/: __init__.py  ai_interactions.py  submissions.py  task_tests.py  tasks.py  topics.py
app/prompts/: task_hint.txt  topic_hint.txt
app/repositories/: __init__.py  ai_interactions.py  base.py  progress.py  submissions.py  task_tests.py  tasks.py  topics.py
app/schemas/: __init__.py  ai_interactions.py  progress.py  responses.py  submissions.py  task_tests.py  tasks.py  topics.py
app/services/: __init__.py  ai_interactions.py  base.py  progress.py  submissions.py  task_tests.py  tasks.py  topics.py
app/tasks/: celery_app.py  tasks.py
app/utils/: db_manager.py  responses.py  schema_validation.py
tests/: conftest.py
(+3 files in other folders)
